[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entropy-analyzer"
version = "0.0.1"
authors = [
    { name = "Aditya Patange (AdiPat)", email = "contact.adityapatange@gmail.com" },
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=0.24.0",
    "openai>=0.27.0",
]
description = "Perform a complete, and detailed entropy analysis on your data."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/thehackersplaybook/entropy-analyzer"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=2.0.0",
]
test = [
    "pytest>=7.0.0",
]
